# schoolProject

./: CMakeLists.txt  DataAnalysis.cpp  DataAnalysis.hpp  README.md  main.cpp  unitTests.sh
communication/: AirQualityInterface.cpp  AirQualityInterface.hpp  Command.cpp  Command.hpp  CommandBase.cpp  CommandBase.hpp  Uart.cpp  Uart.hpp
communication/mock/: airData.txt  gpsCoordinates.txt
communication/unit_tests/: CMakeLists.txt  CommandTests.cpp
debug/: Debug.hpp
sensors/: Aggregator.cpp  Aggregator.hpp  AirQuality.cpp  AirQuality.hpp  Gps.cpp  Gps.hpp  dataStructure.hpp
sensors/unit_tests/: AggregatorTests.cpp  AirQualityTests.cpp  CMakeLists.txt  GpsTests.cpp
unit_tests/: CMakeLists.txt  DataAnalysisTests.cpp
